LATEST VERSION
-----------------------------

ilivalidator 1.9.0 (2018-06-26)
-----------------------------
- added: --disableConstraintValidation
- iox-ili-1.20.5
- ili2c-4.7.8

ilivalidator 1.8.1 (2018-03-09)
-----------------------------
- improved performance
- fixed %JAR_DIR resolution

ilivalidator 1.8.0 (2018-03-02)
-----------------------------
- improved performance
- validate UNIQUE (LOCAL) against current object (and not all)
- fixed %JAR_DIR resolution
- fixed disableAreaValidation in toml not working
- iox-ili-1.20.4

ilivalidator 1.7.0 (2018-02-08)
-----------------------------
- iox-ili-1.20.2
- ili2c-4.7.7

ilivalidator 1.6.0 (2017-12-29)
-----------------------------
- added createReader() template method to high level API
- fixed: ilidir setting from GUI not used 
- added object statistics to log 
- iox-ili-1.20.1
- ili2c-4.7.6

ilivalidator 1.5.0 (2017-10-20)
-----------------------------
- added: --allowItfAreaHoles (only ITF)
- iox-ili-1.19.8
- ili2c-4.7.4

ilivalidator 1.4.0 (2017-08-24)
-----------------------------
- changed default --modeldir to %ITF_DIR;http://models.interlis.ch/;%JAR_DIR/ilimodels
- set value of %JAR_DIR to folder of ilivalidator.jar
- added: new option to assume all objects are known to the validator
- added: iox-ili 1.19.6 (2017-08-24)
- fixed TranslateToOrigin: failed if dest attribute name equals source attrname
- fixed TranslateToTranslation: failed if dest attribute name equals source attrname
- added CsvReader
- added GmlReader
- added Xtf24Reader
- added addGenericReader

ilivalidator 1.3.0 (2017-06-17)
-----------------------------
- added: support multiple input files
- added: --skipPolygonBuilding (only ITF)
- added: --multiplicityOff
- fixed: wrong error message "doItfOidPerTable!=false" / save only persistent settings to ${HOME}/.ilivalidator
- iox-ili-1.19.0 (2017-06-17)
- ili2c-4.7.3

ilivalidator 1.2.1 (2017-04-20)
-----------------------------
- iox-ili 1.18.1 (2017-04-20)